<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_schedule_rooms"
        android:icon="@drawable/ic_today"
        android:title="@string/title_schedules_rooms" />

    <item
        android:id="@+id/navigation_lunch"
        android:icon="@drawable/ic_restaurant"
        android:title="@string/title_lunch" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event"
        android:title="@string/title_reppu_events" />

    <item
        android:id="@+id/navigation_route_guide"
        android:icon="@drawable/ic_route_guide"
        android:title="@string/title_route_guide" />

</menu>
